# EasyEdit

./: .dockerignore  .env.example  .firebaserc  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  LICENSE  README.md  SECURITY.md  TAURI-DOWNLOADS.md  TODO.md  about.css  about.js  build-snap.sh  build-tauri.bat  button-style-options.css  env-check.js  gitHandler.cjs  index.html  jest.config.js  main.cjs  package-lock.json  package.json  preload.cjs  preload.js  renameArtifacts.cjs  setup-https.ps1  setup-https.sh  tsconfig.app.json  vite.config.ts  vite.config.web.ts
about/: about.css  about.html  about.js  shared.css
docs/: ALL-CHANGES-SUMMARY.md  ARCHITECTURE-DIAGRAM.md  AUTH-UPDATE.md  CSP-FIX.md  CUSTOM-THEMES.md  DROPDOWN-WIDTH-FIX.md  EASYEDITCLOUD.md  ELECTRON-APP-FIX.md  FEATURE-COMPARISON.md  FILE-SYSTEM-ACCESS-API.md  FINAL-STATUS.md  FIXES-SUMMARY.md  FLATPAK.md  GIT-INTEGRATION-PLAN.md  GIT-OPERATIONS-COMPLETE.md  GIT-OPERATIONS-FIXES.md  GIT-PHASE4-SUMMARY.md  GIT-STATUS-HEIGHT-FIX.md  GIT-TEST-MANUALLY.md  GITIGNORE-BUTTON-REMOVAL.md  HTTPS-SETUP-GUIDE.md  IMPLEMENTATION-COMPLETE.md  NOMNOML-GUIDE.md  OFFLINE-UML-UPDATE.md  OPEN-REPOSITORY-ELECTRON.md  THEMING.md  (+17 more)
docs-site/: .gitignore  CONNECTION-FIXED.md  PROJECT-SUMMARY.md  QUICK-REFERENCE.md  README.md  SETUP.md  TROUBLESHOOTING.md  index.html  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  shell-scope.json  window-scope.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  oauth.rs
(+292 files in other folders)
