[package]
name = "easyedit"
version = "1.5.1"
description = "Easy Markdown Editor"
authors = ["Ricardo Wagemaker <wagemra@gmail.com>"]
license = "MIT"
repository = "https://github.com/gcclinux/EasyEdit"
edition = "2021"

[lib]
name = "easyedit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-shell = "2"
