[package]
name = "easyedit"
version = "1.5.2"
description = "Easy Markdown Editor"
authors = ["Ricardo Wagemaker <wagemra@gmail.com>"]
license = "MIT"
repository = "https://github.com/gcclinux/EasyEdit"
edition = "2021"

[lib]
name = "easyedit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
